--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,11 @@
 			<artifactId>extentreports</artifactId>
 			<version>3.1.3</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
